--- a/app/sass/blocks/_header-categories.scss
+++ b/app/sass/blocks/_header-categories.scss
@@ -104,3 +104,10 @@
   color: $hover-color;
   font-weight: 700;
 }
+
+@media (min-width: $descktop-width) {
+
+  body {
+    background-color: pink;
+  }
+}
